--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -106,3 +106,10 @@ img {
   clear: both;
   height: 0;
 }
+
+.content {
+  position: relative;
+  height: 100%;
+  overflow-y: auto;
+  padding: .88rem 0 1.5rem;
+}
