--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -16,7 +16,7 @@ body, html {
   color: #252525;
   margin: 0;
   padding: 0;
-  font-size: .28rem;
+  font-size: .56rem;
 }
 
 * {
@@ -64,27 +64,27 @@ img {
   content: normal !important;
 }
 .input-item {
-  padding: 0 40px;
+  padding: 0 .8rem;
 }
 .button-primary {
   display: block;
-  height: 1rem;
+  height: 2rem;
   text-align: center;
-  border-radius: 1rem;
-  line-height: 1rem;
-  font-size: .34rem;
+  border-radius: 2rem;
+  line-height: 2rem;
+  font-size: .68rem;
   background-color: #0a81fb;
   color: #fff;
   width: 100%;
-  margin: .5rem auto 0;
-  letter-spacing: .05rem;
+  margin: 1rem auto 0;
+  letter-spacing: .1rem;
 }
 
 .icon-arrow-left{
-  font-size: .4rem;
+  font-size: .8rem;
   position: absolute;
-  left: .3rem;
-  top: .65rem;
+  left: .6rem;
+  top: 1.3rem;
 }
 
 .text-left{
@@ -111,5 +111,17 @@ img {
   position: relative;
   height: 100%;
   overflow-y: auto;
-  padding: .88rem 0 1.5rem;
+  margin: 2rem 0 3rem;
+}
+.slider-banner {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+.product-slider {
+  .swiper-container {
+    box-sizing: border-box;
+    padding: 0 .48rem;
+  }
 }
